--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the 3rd year 1st semester AF Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
